2.5, Fix for bug #19296: render window escape incorrectly opens file browser.